# ticket-classifier

./: .gitignore  Dockerfile  README.md  docker-compose.yml  installlog.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py  models.py
app/routers/: classify.py  export.py  health.py  models_router.py  tickets.py
app/services/: ollama.py  tickets.py
app/static/: index.html
static/: index.html
tests/: conftest.py  test_classify.py  test_export.py  test_health.py  test_models.py  test_tickets.py
